# BinarySerializer

./: .gitignore  BinarySerializer — копия.cpp  BinarySerializer.cpp  CMakeLists.txt  Makefile  schema.bs  test.cpp  test.h  testStrArr.cpp  testStrArr.h  types.h
example/: test.cpp  test.h
test/: schema.bs  tester.cpp  usage.sh
